--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/font.css">
 </head>
 <body>
+    <div class="qrimg"><img src="image/1Vso0.jpg" alt=""></div>
+
     <div class="header">
         <div class="face"><img src="image/face.png" alt="인물사진"></div>
         <div class="name">손혜인</div>
